# static_analysis_client

./: README.md  main.py  menu copy.py  menu.json  menu.py  pyproject.toml
clients/: ollama.py
helpers/: logger.py  mcp_tools_helper.py
tasks/: tasks.py
utils/: config copy.py  config.py  logger.py  mcp_tools_helper.py  mcp_utils.py  message_history.py  prompts_utils.py
workflows/: workflows.py
