[project]
name = "static-analysis-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "asyncio>=3.4.3",
    "colorama>=0.4.6",
    "fastmcp>=2.9.0",
    "ollama>=0.5.1",
    "python-dotenv>=1.1.1",
    "tabulate>=0.9.0",
]
